--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- ★★★ ファビコン・アプリアイコン設定 ★★★ -->
     <!-- Googleドライブの画像を使う場合は https://drive.google.com/uc?export=view&id=ファイルID の形式にしてください -->
-    <link rel="icon" href="https://placehold.co/64x64/F8355C/ffffff/png?text=YONO">
+    <link rel="icon" href="https://drive.google.com/uc?export=view&id=1dOwnwlzrpLgfv_ytjGl3Z-ignWRjdXYC">
     <link rel="apple-touch-icon" href="https://placehold.co/192x192/F8355C/ffffff/png?text=YONO">
     
     <!-- Google Analytics 4 -->
